tests/packaging-test/test_out/cycle-parse-out.txt
error: expected Ident but got '{'
 --> cycle\root.ctl:1:5
  |
1 | use { "./a" }
  |     ^ token located here
  |
  = info: use -> list -> import -> name

error: expected String but got '{'
 --> cycle\root.ctl:1:5
  |
1 | use { "./a" }
  |     ^ token located here
  |
  = info: use -> list -> import

error: expected '\n' | ';' | ']' but got <eof>
 --> cycle\root.ctl:1:14
  |
1 | use { "./a" }
  |               token located here
  |
  = info: use -> list

error: expected Ident but got '{'
 --> cycle\root\a.ctl:1:5
  |
1 | use { "./a/b" }
  |     ^ token located here
  |
  = info: use -> list -> import -> name

error: expected String but got '{'
 --> cycle\root\a.ctl:1:5
  |
1 | use { "./a/b" }
  |     ^ token located here
  |
  = info: use -> list -> import

error: expected '\n' | ';' | ']' but got <eof>
 --> cycle\root\a.ctl:1:16
  |
1 | use { "./a/b" }
  |                 token located here
  |
  = info: use -> list

error: expected Ident but got '{'
 --> cycle\root\a\b.ctl:1:5
  |
1 | use { "." }
  |     ^ token located here
  |
  = info: use -> list -> import -> name

error: expected String but got '{'
 --> cycle\root\a\b.ctl:1:5
  |
1 | use { "." }
  |     ^ token located here
  |
  = info: use -> list -> import

error: expected '\n' | ';' | ']' but got <eof>
 --> cycle\root\a\b.ctl:1:12
  |
1 | use { "." }
  |             token located here
  |
  = info: use -> list

